# UBLX

./: .gitignore  .mise.toml  Cargo.toml  LICENSE-MIT  README.md  REFACTOR.md  cspell.json
.github/scripts/: bump-homebrew-formula.py  ci-deps-windows-conda.sh  ci-deps-windows-openssl.ps1  commit-and-push-formula.sh
.github/workflows/: ci.yml  release.yml
Formula/: ublx.rb
src/: cli_parser.rs  lib.rs  macros.rs  main.rs
src/app/: README.md  delta.rs  mod.rs  params.rs  snapshot.rs  tokio_rt.rs  user_selected.rs  view_data.rs
src/app/runtime/: frame.rs  mod.rs  tick.rs  view_build.rs
src/config/: mod.rs  opts.rs  parallel.rs  paths.rs  streaming.rs  theme.rs  toast.rs  validation.rs
src/config/profile/: core.rs  io.rs  mod.rs
src/engine/: cache.rs  db_ops.rs  mod.rs  orchestrator.rs  viewer_async.rs
src/engine/db_ops/: README.md  consts.rs  core.rs  delta_log.rs  duplicates.rs  extract_duplicates.rs  lens.rs  lens_export.rs  lens_storage.rs  live_snapshot.rs  mod.rs  path_resolver.rs  reader.rs  utils.rs  zahir_export.rs
src/handlers/: README.md  core.rs  mod.rs  nefax_ops.rs  open.rs  reload.rs  session_switch.rs  snapshot.rs  snapshot_pipeline.rs  state_transitions.rs  viewing.rs  zahir_ops.rs
src/handlers/applets/: dupe_finder.rs  enhance.rs  enhance_policy.rs  file_ops.rs  first_run.rs  lens.rs  mod.rs  opener.rs  settings.rs  theme_selector.rs  ublx_switch.rs  viewer_find.rs
src/handlers/applets/settings/: bool_rows.rs  context.rs  layout_edit.rs  mod.rs  sync.rs  tab.rs
src/handlers/viewing/: async_ops.rs  core.rs  mod.rs  zarrstore.rs
src/handlers/wrappers/: nefax_ops.rs  zahir_ops.rs
src/integrations/: mod.rs  nefax_ops.rs  zahir_ops.rs
src/layout/: event_loop.rs  filter.rs  help.rs  mod.rs  open_menu.rs  popup_menu.rs  setup.rs  style.rs  theme_selector.rs  viewing_pane.rs
src/layout/event_loop/: README.md  app_loop.rs  delta.rs  duplicates.rs  lenses.rs  mod.rs  params.rs  snapshot.rs  user_selected.rs  view_data.rs
src/layout/render/: consts.rs  core.rs
src/layout/style/: core.rs  mod.rs  nodes.rs  table.rs
src/layout/themes/: README.md  color_utils.rs  mod.rs  palettes.rs
src/modules/: README.md  dupe_finder.rs  enhance.rs  enhance_policy.rs  enhancer.rs  exporter.rs  file_ops.rs  first_run.rs  lens.rs  mod.rs  opener.rs  theme_selector.rs  ublx_switch.rs  zahir_export_bg.rs
src/modules/finders/: catalog_filter.rs  dupe_finder.rs  mod.rs  viewer_search.rs
src/modules/settings/: bool_rows.rs  context.rs  layout_edit.rs  mod.rs  sync.rs  tab.rs
src/render/: cache.rs  consts.rs  core.rs  delta.rs  duplicates.rs  lenses.rs  marquee.rs  mod.rs  panels.rs  path_lines.rs  right_pane.rs  scrollable_content.rs  search.rs  snapshot_panels.rs  tables.rs
src/render/formatters/: markdown.rs
src/render/kv_tables/: README.md  column_metadata.rs  consts.rs  csv.rs  draw.rs  format.rs  mod.rs  ratatui_table.rs  schema.rs  sections.rs  tables.rs  tabular.rs  walk.rs  xlsx.rs
src/render/overlays/: README.md  help.rs  mod.rs  theme_selector.rs  toast.rs
src/render/overlays/popup/: delete_confirm.rs  dialogs.rs  enhance_policy_menu.rs  initial_prompt.rs  lens_menu.rs  menus.rs  mod.rs  open_menu.rs  space_menu.rs  utils.rs
src/render/panels/: block.rs  layout.rs  list.rs  mod.rs  right_pane.rs
src/render/panes/: block.rs  delta_mode.rs  layout.rs  middle.rs  mod.rs  right.rs  settings_mode.rs  snapshot_mode.rs  user_selected_mode.rs
src/render/panes/right/: chrome.rs  content.rs  draw.rs  mod.rs
src/render/viewers/: async_tools.rs  csv.rs  csv_handler.rs  image_handler.rs  mod.rs  pdf_preview.rs  pretty_tables.rs  syntect_text.rs  video_preview.rs
src/render/viewers/image/: core.rs  raster_policy.rs
src/render/viewers/images/: core.rs  mod.rs  raster_policy.rs
src/render/viewers/markdown/: core.rs  md_tables.rs  mod.rs  parse.rs  rich_utils.rs  to_text.rs  types.rs
src/render/viewers/markdown/flow_wrap/: mod.rs  plain.rs  styled.rs
src/themes/: README.md  color_utils.rs  mod.rs  palettes.rs  syntect.rs
src/ui/: consts.rs  ctrl_chord.rs  file_ops.rs  input.rs  keymap.rs  lens.rs  menu.rs  mod.rs  mouse.rs  multiselect.rs  snapshot.rs  snapshot_toast.rs
src/ui/consts/: command_mode.rs  glyph.rs  layout.rs  mod.rs  strings.rs  tabs.rs
src/ui/menus/: lens_handler.rs  mod.rs  open.rs  quick_action.rs  space.rs
src/utils/: clipboard.rs  embedded_cover.rs  error_writer.rs  external_tools.rs  format.rs  glyphs.rs  mod.rs  notifications.rs  path.rs  perf.rs  terminal_osc.rs  tools.rs
tests/: cli.rs  clipboard.rs  config.rs  csv_viewer_parse.rs  delta_type.rs  duplicates.rs  engine.rs  file_ops.rs  format.rs  integration.rs  kv_tables.rs  main_tabs.rs  markdown.rs  markdown_flow_wrap.rs  markdown_viewer.rs  notifications.rs  path.rs  paths.rs  policy_tests.rs  pretty_tables.rs  render.rs  settings_overlay.rs  theme_lighten.rs  tui_frame.rs  utils.rs  viewer_find.rs  viewer_total_lines.rs  viewers.rs  zahir.rs
tests/pretty_tables/: common.rs  grid.rs  word_wrap.rs
